code25_all/scala/17407422.txt
scala> val a = Map((1, "111"), (2, "222"))
a: scala.collection.immutable.Map[Int,String] = Map(1 -> 111, 2 -> 222)

scala> val b = a.map((key, value) => value)
<console>:8: error: wrong number of parameters; expected = 1
       val b = a.map((key, value) => value)
                                  ^
scala> val c = a.map(x => x._2)
c: scala.collection.immutable.Iterable[String] = List(111, 222)

val d = a.map({ case(key, value) => value })
a.map((key, value) => value)
Tuple2[Int, String]
Pair of Int, String
a.map((key, value) => value)
a.map(x => x._2)
val myTuple2 = (1, 2)
for ( (k, v) <- a ) yield v
(k, v)
map((key, value) => value)
Tuple2
map
case
Map((1, "111"), (2, "222")).map( ((x,y):Tuple2[Int, String]) => y)
Map((1, "111"), (2, "222")).map( ((x):Tuple2[Int, String]) => x._2)
